fixed nav animation on mobile

--- a/cjcon90/static/scss/base/_animations.scss
+++ b/cjcon90/static/scss/base/_animations.scss
@@ -26,7 +26,7 @@
   }
   100% {
     opacity: 1;
-    height: 7rem;
+    height: 8rem;
     color: $color-grey-dark-3;
   }
 }
